<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp">

    <EditText
        android:id="@+id/login_name_edit"
        style="@style/EditTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_password_edit"
        style="@style/EditTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name_edit"
        android:layout_marginTop="5dp"
        android:hint="@string/edit_input_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_confirm"
        style="@style/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_edit"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_register"
        style="@style/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_confirm"
        android:layout_marginTop="12dp"
        android:text="@string/register" />

</RelativeLayout>