<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/search_major_text"
            style="@style/normal_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/major_choose_tip" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/search_major_spinner"
            style="@style/search_spinner"
            android:layout_alignTop="@+id/search_major_text"
            android:layout_toEndOf="@+id/search_major_text"
            app:ms_background_color="@color/color_activity" />

        <TextView
            android:id="@+id/search_class_text"
            style="@style/normal_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_major_text"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/class_choose_tip" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/search_class_spinner"
            style="@style/search_spinner"
            android:layout_alignTop="@+id/search_class_text"
            android:layout_toEndOf="@+id/search_class_text"
            app:ms_background_color="@color/color_activity" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_class_spinner"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/search"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>